# pet-platform-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  check_pets_data.py  create_reports_data.py  create_test_users.py  fix_report_description.py  inspect_data.py  pyproject.toml  test_app_urllib.py  test_applications.py  update_pet_images.py  verify_system.py
alembic/: env.py
alembic/versions/: 25b72f8e7364_add_birthdate_to_user.py  2faba9cf9fe4_update_application_and_report_models.py  429392f1745b_add_timestamps_to_report.py  51aaf28435f2_add_petfavorite_model.py  66234075237a_initial_migration.py  9e193c1938e0_add_posts_comments_likes_tables.py  baf78d7a6b6e_update_report_model.py  cc12c5e5713b_add_user_profile_fields.py  cfa24d691477_add_details_to_pet_model.py
app/: initial_data.py  main.py
app/api/: api.py  deps.py
app/api/v1/endpoints/: applications.py  auth.py  pets.py  posts.py  reports.py  upload.py  users.py
app/core/: config.py  logging.py  security.py  storage.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  application.py  favorite.py  pet.py  post.py  report.py  user.py
app/schemas/: __init__.py  application.py  pet.py  post.py  report.py  user.py
scripts/: clean_data.py  create_sample_posts.py  reseed_data.py  update_pet_details.py  verify_system.py
tests/: conftest.py  test_api.py
tests/scripts/: test_application_flow.py
